Fix: Increased z-index for custom cursor to avoid getting buried under other elements.

--- a/frontend/src/components/CustomCursor.css
+++ b/frontend/src/components/CustomCursor.css
@@ -11,7 +11,7 @@
   top: 0;
   left: 0;
   pointer-events: none;
-  z-index: 9999;
+  z-index: 2147483647; /* maximum positive value for a 32-bit signed binary integer*/
   transform: translate(-50%, -50%);
 }
 
@@ -23,7 +23,7 @@
   pointer-events: none;
   border-radius: 50%;
   transform: translate(-50%, -50%);
-  z-index: 9998;
+  z-index: 2147483647;
 }
 
 .cursor-outer1 {
